# names

./: README.md  environment.yml  names.py  pyproject.toml
.github/workflows/: publish.yml  workflow.yml
src/: names.py
tests/: test_names.py
