[tool.poetry]
name = "names"
version = "0.0.0"
description = "An API for naming things"
authors = ["Brodie Blackburn <brodie.blackburn@gmail.com>"]
license = "AGPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.test.dependencies]
pytest = "^8.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
