[project]
name = "om-names"
version = "0.1.0"
description = "An API for naming things"
readme = "README.md"
authors = [
    { name = "eidorb", email = "brodieface@gmail.com" }
]
license = "AGPL-3.0-or-later"
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["src/names.py"]
